--- a/styles/modal.css
+++ b/styles/modal.css
@@ -44,8 +44,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
+    padding: 10px;
     margin-bottom: 20px;
 }
 
@@ -60,8 +59,16 @@
     cursor: pointer;
 }
 
+.close-button .non-close {
+    display: none;
+}
+
 .modal-content h2 {
     margin-bottom: 20px;
+}
+
+.modal-content .form-container {
+    grid-template-columns: 1fr;
 }
 
 .form-row {
@@ -82,13 +89,26 @@
     cursor: pointer;
 }
 
+.save-exit-close-on-buttons {
+    display: none;
+}
+
 @media screen and (max-width: 767px) {
     .modal {
         width: 100vw;
-        height: 100vh;
+        max-height: 100vh;
         border-radius: 0;
         padding: 20px 10px;
         z-index: 1;
+    }
+
+    .modal-content h2 {
+        padding-left: 1.2em;
+        font-size: 16px;
+    }
+
+    .modal-header {
+        border-bottom: 1px solid #ddd;
     }
 
     .buttons {
@@ -101,5 +121,27 @@
     .cancel-button {
         width: 100%;
         padding: 15px;
+    }
+
+    .save-exit-close-on-buttons {
+        display: inline-block;
+        width: 100%;
+    }
+
+    .save-exit-close-on-buttons div button {
+        margin-bottom: 10px;
+        height: 42px;
+    }
+
+    @media screen and (max-width: 320px) {
+        .save-button .on-close {
+            display: none;
+        }
+        .save-exit-button .on-close {
+            display: none;
+        }
+        .close-button .non-close {
+            display: inline-block;
+        }
     }
 }
